--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "musicstore",
   "version": "0.1.0",
+  "homepage": "https://lucasmorettorodrigues.github.io/musicstore/",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
@@ -20,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
