--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "musicstore",
   "version": "0.1.0",
-  "homepage": "https://lucasmorettorodrigues.github.io/musicstore/",
+  "homepage": "https://lucasmorettorodrigues.github.io/musicstore",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
